package NCSProto;

message TDBBackgroundTaskTag {
    optional string TagId = 1;
    optional string TagValue = 2;
}

message TDBBackgroundTask {
    repeated TDBBackgroundTaskTag Tags = 1;
}
